# Hana-Montana-AI

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.runtime-overlay  README.md  compose.local.yml  pyproject.toml
docs/: API_STANDARD.md  ARCHITECTURE.md  FEATURE_CLASSIFICATION.md  FEATURE_SPEC_IMPLEMENTATION.md  FOREIGN_OWNERSHIP_MODEL_PRESENTATION.md  GIT_STRATEGY.md  GLOBAL_PEER_AI_SMOKE.md  GLOBAL_PEER_ALL_RESULTS.md  GLOBAL_PEER_BUSINESS_PROFILE_CLASSIFIER.md  HANNAH_AI_MODEL_AUDIT.md  IMPLEMENTATION_LOG.md  IMPLEMENTATION_SEQUENCE.md  KOREAN_FINANCIAL_TERM_RAG.md  MODEL_CARD.md  OBSERVABILITY.md  OPERATIONS.md  ROADMAP.md  SECURITY.md  TESTING.md
reports/: dataset-collection.json  disclosure-codex-gold-report.json  disclosure-codex-stress-gold-report.json  disclosure-importance-ablation-report.json  disclosure-importance-research-evaluation.json  disclosure-importance-training-report.json  financial-alert-sota-benchmark.json  foreign-ownership-quantity-sota-benchmark-2015-2026-experiment.json  foreign-ownership-quantity-sota-benchmark.json  foreign-ownership-quantity-training-report-2015-2026-experiment.json  foreign-ownership-quantity-training-report.json  foreign-ownership-restricted-universe-report.json  foreign-ownership-serving-interval-audit.json  full-content-training-dataset-report.json  global-peer-ai-smoke-report.json  global-peer-explanation-llm-readiness.json  global-peer-full-coverage-report.json  global-peer-fundamentals-sync-report.json  global-peer-korea-company-profile-sync-report.json  global-peer-korea-industry-sync-report.json  global-peer-qwen3-explainer-training.json  global-peer-qwen3-generation-eval.json  global-peer-training-report.json  (+120 more)
(+882 files in other folders)
