[project]
name = "hannah-montana-ai"
version = "0.1.0"
description = "Financial NLP analysis API for Hana OmniLens alerts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "defusedxml>=0.7.1",
    "fastapi==0.136.1",
    "joblib>=1.5.1",
    "numpy>=1.26,<3.0",
    "opencv-python-headless>=4.10,<5.0",
    "pdf2image>=1.17,<2.0",
    "pillow>=10.4,<11.0",
    "pytesseract>=0.3.13,<0.4",
    "prometheus-client>=0.22,<1.0",
    "pyahocorasick>=2.1,<3.0",
    "pyarrow>=20.0,<24.0",
    "scikit-learn>=1.7.0",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
transformer = [
    "accelerate>=1.9,<2.0",
    "peft>=0.16,<1.0",
    "torch>=2.6,<3.0",
    "transformers>=4.53,<6.0",
]
sota = [
    "accelerate>=1.9,<2.0",
    "neuralforecast>=3.1.9",
    "peft>=0.16,<1.0",
    "torch>=2.6,<3.0",
    "transformers>=4.53,<6.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "httpx>=0.28.1",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
    "types-defusedxml>=0.7.0.20250822",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["hannah_montana_ai"]

[[tool.mypy.overrides]]
module = ["accelerate", "ahocorasick", "joblib", "neuralforecast", "neuralforecast.*", "pandas", "peft", "peft.*", "pyarrow", "pyarrow.*", "sklearn.*", "torch", "transformers", "transformers.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
